# bevy_instanced_text

./: Cargo.toml  README.md
crates/bevy_instanced_text/: Cargo.toml  README.md
crates/bevy_instanced_text/src/: lib.rs
crates/bevy_instanced_text/src/gpu/: atlas.rs  font_atlas.rs  instanced_render.rs  mod.rs  pipeline.rs  text.wgsl
crates/bevy_instanced_text/src/view/: anchor.rs  bounds.rs  buffer_anchor.rs  color.rs  cursor.rs  font.rs  glyph.rs  layout.rs  layout_builder.rs  measurement.rs  mod.rs  overlay.rs  pipeline.rs  plugin.rs  render.rs  snapshot.rs  state.rs  styling.rs  text.rs  text_access.rs  text_style.rs  theme.rs  tuning.rs  viewport.rs
crates/bevy_instanced_text_interaction/: Cargo.toml
crates/bevy_instanced_text_interaction/src/: clipboard.rs  cursor.rs  focus.rs  interaction_states.rs  key_repeat.rs  lib.rs  plugin.rs  selection.rs  text_state.rs
crates/bevy_text_interaction/: Cargo.toml  README.md
crates/bevy_text_interaction/src/: clipboard.rs  components.rs  cursor.rs  focus.rs  interaction.rs  interaction_states.rs  key_repeat.rs  lib.rs  picking.rs  plugin.rs  prelude.rs  selection.rs  state.rs  text_edit.rs  theme.rs
examples/: Cargo.toml  text_view.rs  ui_inspector.rs
