[package]
name = "bevy_instanced_text"
version = "0.1.0"
edition = "2021"
authors = ["PoHsuanLai"]
license = "MIT OR Apache-2.0"
description = "GPU-accelerated text rendering engine for Bevy. Provides primitives (glyph atlas, instanced rendering, DisplayLayout, overlays) for building editors, terminals, chat panels, log viewers, and any other text-heavy UI."
repository = "https://github.com/PoHsuanLai/bevy_code_editor"
keywords = ["bevy", "text", "rendering", "gpu", "engine"]
categories = ["game-development", "rendering"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_color",
    "bevy_mesh",
    "bevy_camera",
    "bevy_log",
    "bevy_picking",
    "bevy_text",
] }
bevy_camera = "0.18"

ropey = "1.6"
bitflags = "2"
cosmic-text = "0.12"
swash = "0.1"
bytemuck = { version = "1.14", features = ["derive"] }
